Added TextBox style and .gitignore file

--- a/MyStatWpf/App.xaml
+++ b/MyStatWpf/App.xaml
@@ -8,6 +8,7 @@
                 <ResourceDictionary>
                     <local:Bootstrapper x:Key="PrimaryBootstrapper"></local:Bootstrapper>
                 </ResourceDictionary>
+                <ResourceDictionary Source="Styles/ControlStyles.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
