--- a/MyStatWpf/Styles/Controls.xaml
+++ b/MyStatWpf/Styles/Controls.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:MyStatWpf">
-    
+
     <Style TargetType="TextBox" x:Key="TextBoxStyle">
         <Setter Property="Control.BorderThickness" Value="2"/>
         <Setter Property="Control.FontSize" Value="15"/>
@@ -25,16 +25,6 @@
                 <Setter Property="Control.BorderBrush" Value="#48BBFF"/>
             </Trigger>
         </Style.Triggers>
-    </Style>
-
-    <Style x:Key="FocusVisual">
-        <Setter Property="Control.Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
     </Style>
 
     <Style x:Key="RadioButtonStyle" TargetType="{x:Type RadioButton}">
@@ -232,4 +222,91 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+
+    <ControlTemplate TargetType="Button" x:Key="PrimaryBlueButton">
+        <Border x:Name="btnBorder" Width="{TemplateBinding Width}" Height="{TemplateBinding Height}"
+                    Background="#48bbff" CornerRadius="5" BorderBrush="#48bbff" Cursor="Hand">
+            <Border.Effect>
+                <DropShadowEffect x:Name="shadowEffect" BlurRadius="20" Direction="-90"
+                                      RenderingBias="Performance" ShadowDepth="2"
+                                      Opacity="0" Color="#cdcdcd"/>
+            </Border.Effect>
+            <TextBlock x:Name="ttbk" Foreground="White" FontSize="{TemplateBinding FontSize}"
+                           VerticalAlignment="Center" HorizontalAlignment="Center"
+                           FontFamily="{TemplateBinding FontFamily}">
+                    <ContentPresenter></ContentPresenter>
+            </TextBlock>
+        </Border>
+
+        <ControlTemplate.Triggers>
+            <EventTrigger RoutedEvent="Border.MouseEnter">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Storyboard.TargetName="shadowEffect" Storyboard.TargetProperty="Opacity"
+                                             To="1.0" Duration="0:0:0.5">
+                        </DoubleAnimation>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+            <EventTrigger RoutedEvent="Border.MouseLeave">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Storyboard.TargetName="shadowEffect" Storyboard.TargetProperty="Opacity"
+                                             To="0.0" Duration="0:0:0.5">
+                        </DoubleAnimation>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+            <EventTrigger RoutedEvent="Border.MouseLeftButtonDown">
+                <BeginStoryboard>
+                    <BeginStoryboard.Storyboard>
+                        <Storyboard>
+                            <ColorAnimation Storyboard.TargetName="btnBorder"
+                                                Storyboard.TargetProperty="Background.Color"
+                                                To="#48ccff" Duration="0:0:1"></ColorAnimation>
+                        </Storyboard>
+                    </BeginStoryboard.Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
+    <ControlTemplate TargetType="Button" x:Key="PrimaryButton">
+        <Border x:Name="btnBorder" Width="{TemplateBinding Width}" Height="{TemplateBinding Height}"
+                    Background="Transparent" CornerRadius="5" Cursor="Hand"
+                    BorderThickness="2" BorderBrush="#cacaca">
+            <TextBlock x:Name="ttbk" Foreground="#cacaca" FontSize="{TemplateBinding FontSize}"
+                           VerticalAlignment="Center" HorizontalAlignment="Center"
+                           FontFamily="{TemplateBinding FontFamily}" FontWeight="{TemplateBinding FontWeight}">
+                    <ContentPresenter></ContentPresenter>
+            </TextBlock>
+        </Border>
+
+        <ControlTemplate.Triggers>
+            <EventTrigger RoutedEvent="Border.MouseEnter">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <ColorAnimation Storyboard.TargetName="ttbk" Storyboard.TargetProperty="Foreground.Color"
+                                            To="#48bbff" Duration="0:0:0.5">
+                        </ColorAnimation>
+                        <ColorAnimation Storyboard.TargetName="btnBorder" Storyboard.TargetProperty="BorderBrush.Color"
+                                            To="#48bbff" Duration="0:0:0.5">
+                        </ColorAnimation>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+            <EventTrigger RoutedEvent="Border.MouseLeave">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <ColorAnimation Storyboard.TargetName="ttbk" Storyboard.TargetProperty="Foreground.Color"
+                                            To="#cacaca" Duration="0:0:0.5">
+                        </ColorAnimation>
+                        <ColorAnimation Storyboard.TargetName="btnBorder" Storyboard.TargetProperty="BorderBrush.Color"
+                                            To="#cacaca" Duration="0:0:0.5">
+                        </ColorAnimation>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
 </ResourceDictionary>
