--- a/MyStatWpf/Styles/Controls.xaml
+++ b/MyStatWpf/Styles/Controls.xaml
@@ -7,6 +7,7 @@
         <Setter Property="Control.FontSize" Value="15"/>
         <Setter Property="Control.Foreground" Value="Black"/>
         <Setter Property="Control.Padding" Value="5"/>
+        <Setter Property="TextAlignment" Value="Center"/>
         <Setter Property="Control.Background" Value="White"/>
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -64,7 +65,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Viewbox Width="18" Height="18"  VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
-                            <Canvas Width="24" Height="24">
+                            <Canvas Width="21" Height="21">
                                 <Path x:Name="Graphic"
                                       Data="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" 
                                       Fill="#414F5A"/>
@@ -80,7 +81,7 @@
                                 </Ellipse>
                             </Canvas>
                         </Viewbox>
-                        <ContentPresenter x:Name="contentPresenter" Grid.Column="1" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        <ContentPresenter x:Name="contentPresenter" Grid.Column="1" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="Center"/>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <EventTrigger RoutedEvent="ButtonBase.Click">
