Login screen design

--- a/MyStatWpf/Styles/Controls.xaml
+++ b/MyStatWpf/Styles/Controls.xaml
@@ -2,12 +2,12 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:MyStatWpf">
 
-    <Style TargetType="TextBox" x:Key="TextBoxStyle">
+    <Style x:Key="TextBoxStyle">
         <Setter Property="Control.BorderThickness" Value="2"/>
         <Setter Property="Control.FontSize" Value="15"/>
         <Setter Property="Control.Foreground" Value="Black"/>
         <Setter Property="Control.Padding" Value="5"/>
-        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="TextBlock.TextAlignment" Value="Center"/>
         <Setter Property="Control.Background" Value="White"/>
         <Setter Property="Control.Template">
             <Setter.Value>
