--- a/MyStatWpf/Styles/Controls.xaml
+++ b/MyStatWpf/Styles/Controls.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:MyStatWpf">
+                    xmlns:local="clr-namespace:MyStatWpf"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity">
 
     <Style x:Key="TextBoxStyle">
         <Setter Property="Control.BorderBrush" Value="#cacaca"></Setter>
@@ -441,5 +442,7 @@
             </Setter.Value>
         </Setter>
         <Setter Property="Background" Value="White"/>
+        <Setter Property="Margin" Value="10"></Setter>
+        <Setter Property="AllowDrop" Value="True"></Setter>
     </Style>
 </ResourceDictionary>
