--- a/MyStatWpf/View/MainView.xaml
+++ b/MyStatWpf/View/MainView.xaml
@@ -17,47 +17,39 @@
     </WindowChrome.WindowChrome>
 
     <Border Background="#F1F2F3" CornerRadius="5">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="13*"/>
-                <RowDefinition Height="82*"/>
-                <RowDefinition Height="155*"/>
-            </Grid.RowDefinitions>
+        <ScrollViewer>
+            <WrapPanel x:Name="pnl" HorizontalAlignment="Center" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <!--<Border Style="{StaticResource BorderStyle}" Padding="100">
+                    <StackPanel>
+                        <Ellipse Width="75" Height="75" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 5">
+                            <Ellipse.Fill>
+                                <ImageBrush Stretch="UniformToFill" ImageSource="{Binding Api.CurrentUser.PhotoUri}"></ImageBrush>
+                            </Ellipse.Fill>
+                        </Ellipse>
+                        <TextBlock HorizontalAlignment="Center" Text="{Binding Api.CurrentUser.FullName}" FontSize="14" Foreground="{DynamicResource Black}"></TextBlock>
+                        <TextBlock HorizontalAlignment="Center" Text="{Binding Api.CurrentUser.GroupName}" FontSize="12" Foreground="{DynamicResource Black}"></TextBlock>
+                        <TextBlock Text="{Binding Api.CurrentUser.AchieverCount}"></TextBlock>
+                    </StackPanel>]
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger Dr
+                    </i:Interaction.Triggers>
+                </Border>
 
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-
-                <Border Margin="8 0 16 8" Grid.Column="0" Style="{StaticResource BorderStyle}">
+                <Border Style="{StaticResource BorderStyle}" Padding="100">
 
                 </Border>
 
-                <Border Margin="8 0 16 8" Grid.Column="1" Style="{StaticResource BorderStyle}">
+                <Border Style="{StaticResource BorderStyle}" Padding="100">
+
+                </Border>
+                <Border Padding="100" Style="{StaticResource BorderStyle}">
 
                 </Border>
 
-                <Border Margin="8 0 16 8" Grid.Column="2" Style="{StaticResource BorderStyle}">
+                <Border Padding="100" Style="{StaticResource BorderStyle}">
 
-                </Border>
-            </Grid>
-
-            <Grid Grid.Row="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="92*"/>
-                    <ColumnDefinition Width="183*"/>
-                </Grid.ColumnDefinitions>
-
-                <Border Margin="8 8 16 8" Grid.Column="0" Style="{StaticResource BorderStyle}">
-
-                </Border>
-
-                <Border Margin="0 8 8 8" Grid.Column="1" Style="{StaticResource BorderStyle}">
-
-                </Border>
-            </Grid>
-        </Grid>
+                </Border>-->
+            </WrapPanel>
+        </ScrollViewer>
     </Border>
 </Window>
